--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -2,19 +2,19 @@
 http://ionicframework.com/docs/theming/ */
 
 :root {
-	--ion-color-primary: #374D9B;
-	--ion-color-primary-rgb: 55,77,155;
+	--ion-color-primary: #BD2130;
+	--ion-color-primary-rgb: 189,33,48;
 	--ion-color-primary-contrast: #f7f7f7;
 	--ion-color-primary-contrast-rgb: 247,247,247;
-	--ion-color-primary-shade: #304488;
-	--ion-color-primary-tint: #4b5fa5;
+	--ion-color-primary-shade: #a61d2a;
+	--ion-color-primary-tint: #c43745;
 
-	--ion-color-secondary: #2C396A;
-	--ion-color-secondary-rgb: 44,57,106;
-	--ion-color-secondary-contrast: #f7f7f7;
-	--ion-color-secondary-contrast-rgb: 247,247,247;
-	--ion-color-secondary-shade: #27325d;
-	--ion-color-secondary-tint: #414d79;
+	--ion-color-secondary: #3E3535;
+	--ion-color-secondary-rgb: 62,53,53;
+	--ion-color-secondary-contrast: #ffffff;
+	--ion-color-secondary-contrast-rgb: 255,255,255;
+	--ion-color-secondary-shade: #372f2f;
+	--ion-color-secondary-tint: #514949;
 
 	--ion-color-tertiary: #ce5e66;
 	--ion-color-tertiary-rgb: 206,94,102;
